# spectral-edl-llm

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-25-sk-edl-design.md  2026-02-25-sk-edl-implementation.md
examples/: local_mock_demo.py
scripts/: bleurt_sidecar.py  run_expanded_full_benchmarks_after_current.sh  run_full_benchmarks.sh  run_logu_strict_cuda.sh  run_paper_strict_compare.py  setup_cuda_server.sh
src/skedl/: __init__.py  cli.py  schemas.py
src/skedl/adapters/: __init__.py
src/skedl/adapters/emb/: __init__.py  base.py  sentence_transformers.py
src/skedl/benchmarks/: __init__.py  compare_published.py  compare_reliability.py  paper_protocols.py  published_baselines.py  reliability_report.py  runner.py  tasks.py  truthfulqa.py
src/skedl/core/: __init__.py  dirichlet.py  entropy.py  fusion.py  graph.py  kernel.py  metrics.py  spectral.py
src/skedl/models/: __init__.py  dirichlet_router.py  edl_head.py  hybrid_model.py  logit_dirichlet.py
src/skedl/pipeline/: __init__.py  datasets.py  evaluator.py  features.py  sampling.py  trainer.py
tests/integration/: test_cli.py  test_feature_pipeline.py
tests/unit/: test_adapters_optional.py  test_benchmark_runner.py  test_benchmark_tasks.py  test_compare_published.py  test_compare_reliability.py  test_dirichlet.py  test_imports.py  test_kernel_entropy.py  test_logit_dirichlet.py  test_metrics.py  test_models.py  test_paper_protocols.py  test_published_baselines.py  test_reliability_report.py  test_sampling.py  test_spectral.py  test_trainer.py  test_truthfulqa.py
(+3 files in other folders)
