[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skedl"
version = "0.1.0"
description = "Spectral-Kernel EDL confidence estimation for chain-of-thought"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "torch>=2.2",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.39",
  "sentence-transformers>=2.6",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
skedl = "skedl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
